eagle_test/error/list_error.eagle
var l = [1, 2, 3];
print l[3];
// expected: [RuntimeError at line 2] List subscript out of range.
print l[-4];
// expected: [RuntimeError at line 4] List subscript out of range.
l["str"] = 1;
// expected: [RuntimeError at line 6] List subscript must be integer.
l[0.5] = 2;
// expected: [RuntimeError at line 8] List subscript must be integer, not float.
l.append(l);
// expected: [RuntimeError at line 10] List can not contain itself.